# fakesnakr

./: .gitignore  .gitmodules  README.md  pyproject.toml
notebooks/: 01-eda-isot.ipynb  02-heuristics.ipynb
prediction-backend/: .terraform.lock.hcl  Dockerfile  README.md  app.py  main.tf  prepare-terraform.sh
