[tool.poetry]
name = "fakesnak"
version = "0.1.0"
description = ""
authors = ["Omar Ali Sheikh <sheikhomar@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.13"
numba = "^0.56.0"
pandas = "^1.4.3"
scikit-learn = "^1.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
